Fix to have the overflow hidden to the inner components since many inner components are reusing base.css

--- a/apps/base/base.css
+++ b/apps/base/base.css
@@ -1,6 +1,6 @@
 @import url("http://fonts.googleapis.com/css?family=Varela");
 
-html, body { margin:0; padding:0 } 
+html, body { margin:0; padding:0; overflow:hidden } 
 
 * { 
   font-family: 'Varela', sans-serif;
